// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`private route component renders correctly if logged in 1`] = `
<Route
  location={
    Object {
      "from": "over there",
    }
  }
  render={[Function]}
/>
`;

exports[`private route component renders correctly if logged in 2`] = `
<component
  authenticated={true}
  component={[Function]}
  location={
    Object {
      "from": "over there",
    }
  }
/>
`;

exports[`private route component renders correctly if logged out 1`] = `
<Route
  location={
    Object {
      "from": "over there",
    }
  }
  render={[Function]}
/>
`;

exports[`private route component renders correctly if logged out 2`] = `
<Redirect
  to={
    Object {
      "pathname": "/login",
      "state": Object {
        "from": Object {
          "from": "over there",
        },
      },
    }
  }
/>
`;
